[package]
name = "get-weather-poisoned"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
rmcp = { version = "0.1.5", features = ["server"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12.15", features = [ "blocking", "json" ] }
